Add week9-1 note

--- a/main.tex
+++ b/main.tex
@@ -167,6 +167,7 @@
 \DeclareMathOperator{\Isom}{Isom}
 \DeclareMathOperator{\Tor}{Tor}
 \DeclareMathOperator{\Exp}{Exp}
+\DeclareMathOperator{\Syl}{Syl}
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
 \DeclarePairedDelimiter{\gen}{\langle}{\rangle} % generator
@@ -245,6 +246,7 @@
 \include{group/week6}
 \include{group/week7}
 \include{group/week8}
+\include{group/week9}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
