--- a/main.tex
+++ b/main.tex
@@ -37,6 +37,7 @@
 
 %%%%%%%%%%%%%%%%%%%TikZ%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{tikz}
+\usepackage{tikz-cd}
 %\usepackage{circuitikz}
 \usetikzlibrary{calc}
 \usetikzlibrary{arrows}
@@ -247,6 +248,7 @@
 \include{group/week7}
 \include{group/week8}
 \include{group/week9}
+\include{group/week10}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
