--- a/group/week2.tex
+++ b/group/week2.tex
@@ -211,7 +211,7 @@ For $n = 3, A \in \text{O}(3)$, we have $A \sim \begin{pmatrix}
     \cos \frac{2\pi}{n} & -\sin \frac{2\pi}{n} \\ 
     \sin \frac{2\pi}{n} & \cos \frac{2\pi}{n}
   \end{pmatrix} \in \text{SO}(2)$. Then $\gen{A} =
-  \{ I_2, A, A^2, \dots, a^{n-1} \}$ and $A^n = I_2, A^m = A^r$ where
+  \{ I_2, A, A^2, \dots, A^{n-1} \}$ and $A^n = I_2, A^m = A^r$ where
   $m \equiv r \pmod n$.
 \end{example}
 
@@ -274,7 +274,7 @@ For $n = 3, A \in \text{O}(3)$, we have $A \sim \begin{pmatrix}
         \begin{itemize}
           \item $(a^r)^{n'} = a^{r'dn'} = (a^n)^{r'} = 1 \implies \ord(a^r) \mid n'$.
           \item $1 = (a^r)^{\ord(a^r)} = a^{r \ord(a^r)} \implies
-            n \mid r \ord{a^r} \implies n' \mid r' \ord(a^r) \implies
+            n \mid r \ord(a^r) \implies n' \mid r' \ord(a^r) \implies
             n' \mid \ord(a^r)$.
         \end{itemize}
       \end{proof}
