--- a/group/week4.tex
+++ b/group/week4.tex
@@ -270,7 +270,7 @@ Inverse limit:
     $F$ can be rearded as a vector space over $\quot{\Zb}{p\Zb}$.
 
     Let $\dim_{\quot{\Zb}{p\Zb}} F = n$, then $F \cong
-    \left(\quot{\Zb}{p\Zb}\right)^n \implies \abs{F} = n$.
+    \left(\quot{\Zb}{p\Zb}\right)^n \implies \abs{F} = p^n$.
   \end{proof}
 \end{theorem}
 
