--- a/group/week6.tex
+++ b/group/week6.tex
@@ -229,8 +229,8 @@ Construct a non-abelian group of order 21.
 \end{fact}
 Sol : $\phi_k: \quot{\Zb}{p\Zb} \to \quot{\Zb}{p\Zb}, \bar{1} \mapsto \bar{k}$
 
-$\phi_{k_2} o \phi_{k_1} (T) = \phi_{k_2}(\bar{k_1}) = \phi_{k_2}(T+\cdots+T)
-= \bar{k_2} + \cdots \bar{k_2} = \ob{k_1 k_2}$
+$\phi_{k_2} \circ \phi_{k_1} (1) = \phi_{k_2}(\bar{k_1}) = \phi_{k_2}(1+\cdots+1)
+= \ob{k_2} + \cdots \ob{k_2} = \ob{k_1 k_2}$
 
 Let $K = C_3, H = C_7$, define $\tau : C_3 \to \Aut(C_7) \cong C_6, a \mapsto \phi_2$
 
@@ -305,7 +305,7 @@ so $A_4 \cong C_3 \times_\tau V_4$.
   \begin{itemize}
     \item $\Aut(\quot{\Zb}{p\Zb} \times \quot{\Zb}{p\Zb}) \cong GL_2(\quot{\Zb}{p\Zb})$
       (regarded as a vector space over $\quot{\Zb}{p\Zb}$)
-    \item $\Aut(\quot{\Zb}{p\Zb} \times \quot{\Zb}{p\Zb}) \cong
+    \item $\Aut(\quot{\Zb}{p\Zb} \times \quot{\Zb}{q\Zb}) \cong
       \Aut(\quot{\Zb}{p\Zb}) \times \Aut(\quot{\Zb}{q\Zb}) \cong
       C_{p-1} \times C_{q-1}$
   \end{itemize}
