--- a/main.tex
+++ b/main.tex
@@ -198,7 +198,7 @@
 \ExplSyntaxOff
 
 \newcommand\Div{\,\big|\,}
-\newcommand\nDiv{\,\big\not|\,}
+\newcommand\nDiv{\,\not\big|\,}
 \newcommand\relmiddle[1]{\mathrel{}\middle#1\mathrel{}}
 \newcommand{\RNum}[1]{\uppercase\expandafter{\romannumeral #1\relax}}
 
