--- a/group/week8.tex
+++ b/group/week8.tex
@@ -2,7 +2,7 @@
 \subsection{Week 8}
 \subsubsection{Fundamental theorem of finitely generated abelian groups}
 
-\begin{theorem}[Main theorem]
+\begin{theorem}[Structure theorem of finitely generated module over a PID]
   Let $R$ be a PID and $M$ be a finitely generated $R$-module.
   Then $M \cong \quot{R}{d_1 R} \oplus \dots \oplus \quot{R}{d_l R} \oplus R^s,
   d_i \in R$ with $d_i \Div d_{i+1} \quad \forall i = 1, \dots, l-1$
