--- a/main.tex
+++ b/main.tex
@@ -203,7 +203,7 @@
 \newcommand{\RNum}[1]{\uppercase\expandafter{\romannumeral #1\relax}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\renewcommand{\proofname}{\bf pf:}
+%\renewcommand{\proofname}{\bf pf:}
 \newtheoremstyle{mystyle}% custom style
   {6pt}{15pt}%      top and bottom margin
   {}%               content style
