--- a/group/week5.tex
+++ b/group/week5.tex
@@ -164,7 +164,7 @@
       \Inn(G) \defeq \{\, \tau_g \mid g \in G \,\}
     \]
 
-    \begin{fact} 
+    \begin{fact}
       $\tau_g$ is an automorphism. (isom. $G \to G$)
     \end{fact}
 
@@ -181,7 +181,7 @@
         $G_x = \{\, g \in G \mid gxg^{-1} = x \,\} = Z_G(x)$.
     \end{itemize}
     \[
-      \abs{\text{Cl}(x)} = [G:Z_G(x)], \text{~if~} \abs{G} < \infty, 
+      \abs{\text{Cl}(x)} = [G:Z_G(x)], \text{~if~} \abs{G} < \infty,
       \abs{G} = \abs{\text{Cl}(x)}\abs{Z_G(x)}
     \]
   \item For $H \lhd G$, define $G \times H \to H \quad (g, h) \mapsto ghg^{-1}$
@@ -195,11 +195,11 @@
     $N_G(H) = \{\, g\in G \mid gHg^{-1} = H \,\}$
 
 \end{itemize}
+
 \begin{theorem}[Normalizer-Centralizer theorem]
-  If $H \leq G$ and define $C_G(H) = \{ g \in G : g h g^{-1} = h, \forall h \in H \}$, then
-  $N_G(H) / C_G(H) \toone \Aut(H)$. 
+  If $H \leq G$ then $\quot{N_G(H)}{Z_G(H)} \toone \Aut(H)$.
 \end{theorem}
 \begin{proof}
-  Define $\phi = g :: N_G(H) \mapsto (h \mapsto g h g^{-1}) :: \Aut(H)$. Then 
-  $\ker \phi = C_G(H)$, so $N_G(H) / C_G(H) \cong \img \phi \leq \Aut(H)$.
+  Define $\varphi = g :: N_G(H) \mapsto (h \mapsto g h g^{-1}) :: \Aut(H)$. Then
+  $\ker \varphi = Z_G(H)$, so $\quot{N_G(H)}{Z_G(H)} \cong \Image \varphi \leq \Aut(H)$.
 \end{proof}
