--- a/group/week7.tex
+++ b/group/week7.tex
@@ -122,7 +122,7 @@ The classification of all finite simple groups is given as follows:
   First prove $(H\cap K')H' \lhd (H\cap K)H'$.
   \begin{itemize}
     \item $\forall g \in H \cap K, g K'g^{-1} = K' \leadsto
-      (gHg^{-1}) \cap (gK'g^{-1} = H \cap K'$ and $gH'g^{-1} = H'$. So
+      (gHg^{-1}) \cap (gK'g^{-1}) = H \cap K'$ and $gH'g^{-1} = H'$. So
       \[ g(H\cap K')H'g^{-1} = (H\cap K')H' \]
     \item $\forall g \in H', ab \in (H\cap K')H'$, 
   \end{itemize}
