--- a/main.tex
+++ b/main.tex
@@ -197,8 +197,8 @@
  }
 \ExplSyntaxOff
 
-\newcommand\Div{\,\big|\,}
-\newcommand\nDiv{\,\not\big|\,}
+\newcommand\Div{\mathrel{\big|}}
+\newcommand\nDiv{\mathrel{\not\big|}}
 \newcommand\relmiddle[1]{\mathrel{}\middle#1\mathrel{}}
 \newcommand{\RNum}[1]{\uppercase\expandafter{\romannumeral #1\relax}}
 
