--- a/group/week8.tex
+++ b/group/week8.tex
@@ -112,16 +112,16 @@
 
     \begin{enumerate}[(1)]
       \item By induction on $n$. $n = 2$, need $I_1\cap I_2 \subseteq I_1I_2$.
-        Indded, $I_1\cap I_2 = (I_1\cap I_2)R = (I_1\cap I_2)(I_1+I_2)
+        Indeed, $I_1\cap I_2 = (I_1\cap I_2)R = (I_1\cap I_2)(I_1+I_2)
         \subseteq I_1I_2$.
 
         For $n > 2$, since $I_i + I_n = R \quad \forall i = 1,\dots, n-1$,
         $\exists x_i \in I_i, y_i \in I_n$ s.t. $x_i + y_i = 1 \quad
         \forall i = 1,\dots, n-1$.
 
-        So $x_1x_2\dots x_{n-1} = (1-y_1)(1-y_2)\dots(1-y_{n-1})$
-        ($I_1I_2\dots I_{n-1} = 1 + I_n$) $\implies I_1I_2\dots I_{n-1}
-        + I_n = R$.
+        So $x_1x_2\dots x_{n-1} = (1-y_1)(1-y_2)\dots(1-y_{n-1}) = 1 - y,
+        y \in I_n
+        \implies I_1I_2\dots I_{n-1} + I_n = R$.
 
         Now, $I_1I_2\dots I_n = (I_1\dots I_{n-1})I_n =
         (I_1\dots I_{n-1})\cap I_n = I_1\cap \dots \cap I_n$.
