--- a/main.tex
+++ b/main.tex
@@ -169,6 +169,13 @@
 \DeclareMathOperator{\Tor}{Tor}
 \DeclareMathOperator{\Exp}{Exp}
 \DeclareMathOperator{\Syl}{Syl}
+
+% multilinear
+\DeclareMathOperator{\Hom}{Hom}
+\DeclareMathOperator{\Lrad}{lrad}
+\DeclareMathOperator{\Rrad}{rrad}
+\DeclareMathOperator{\rank}{rank}
+
 \newcommand{\ob}{\overline}
 \DeclareMathOperator{\ord}{ord}
 \DeclarePairedDelimiter{\gen}{\langle}{\rangle} % generator
@@ -179,6 +186,7 @@
 \newcommand\onto{\twoheadrightarrow}
 \newcommand\acts{\curvearrowright}
 \newcommand\revacts{\curvearrowleft}
+\newcommand\isoto{\xrightarrow{\sim}}
 
 % cycle group \cycle{1,2,3} => (1 2 3)
 \ExplSyntaxOn
@@ -248,7 +256,7 @@
 \include{group/week7}
 \include{group/week8}
 \include{group/week9}
-\include{group/week10}
+\include{multilinear/week11}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % \bibliographystyle{plain}
 % \bibliography{journal.bib}
