Add some content

--- a/group/week9.tex
+++ b/group/week9.tex
@@ -97,10 +97,10 @@ there are no relations satisfied by any of elements in $X$.
 \begin{definition}
   A free group on $X$ is a group $F$ with an inclusion map $i: X \to F$ satisfying the
   following universal property: For any group $G$ and any map $f: X \to G$,
-  exists a unique group homo $\phi : F \to G$ that the following diagram commutes.
+  exists a unique group homo $\varphi : F \to G$ that the following diagram commutes.
   \[
     \begin{tikzcd}
-    X \arrow{r}{i} \arrow[swap]{dr}{f} & F \arrow{d}{\phi} \\
+    X \arrow{r}{i} \arrow[swap]{dr}{f} & F \arrow{d}{\varphi} \\
     & G
     \end{tikzcd}
   \]
