--- a/group/week9.tex
+++ b/group/week9.tex
@@ -100,7 +100,7 @@ there are no relations satisfied by any of elements in $X$.
   exists a unique group homo $\varphi : F \to G$ that the following diagram commutes.
   \[
     \begin{tikzcd}
-    X \arrow{r}{i} \arrow[swap]{dr}{f} & F \arrow{d}{\varphi} \\
+    X \arrow[r]{i} \arrow[swap, dr]{f} & F \arrow{d}{\varphi} \\
     & G
     \end{tikzcd}
   \]
