--- a/main.tex
+++ b/main.tex
@@ -159,6 +159,9 @@
 \newcommand{\Gc}{\mathcal{G}}
 \newcommand{\Fc}{\mathcal{F}}
 
+\newcommand{\Mf}{\mathfrak{M}}
+\newcommand{\Grf}{\mathfrak{Gr}}
+
 \DeclareMathOperator{\diag}{diag}
 \DeclareMathOperator{\sgn}{sgn}
 \DeclareMathOperator{\lcm}{lcm}
